--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="JMRX - JOSE MEJIA">
-    <meta name="description" content="calculadora hecha con javascript html y css">
+    <meta name="description" content="calculadora creada con javascript html y css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>calculadora</title>
     <link
